--- a/css/selectors.css
+++ b/css/selectors.css
@@ -62,4 +62,59 @@ a[target="_blank"] {
     width: auto;
     display: inline-block;
   }
+  .btn + .btn {
+    margin-left: 20px;
+  }
 }
+
+/* Combinators ------------- */
+
+form > a {
+  font-size: .7em;
+}
+
+/*h1 ~ label {
+  background: tomato;
+  color: #fff;
+  padding: 5px;
+}*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+jaskdf
