--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,10 @@
 /* Structural Pseudo-classes------------------ */
+
+li:first-child {
+  background: #52bab3;
+  color: #fff;
+}
+
+li:last-child {
+  border: none;
+}
