--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,12 @@ li:first-child {
 li:last-child {
   border: none;
 }
+
+span:only-child {
+  color: #52bab3;
+  font-size: 1.5em;
+}
+
+:empty {
+  background-color: tomato;
+}
