Substring matching attribute 'contains'

--- a/css/main.css
+++ b/css/main.css
@@ -27,9 +27,6 @@ a {
 a[href^="http:"] {
 	color: #52bab3;
 	text-decoration: none;
-	background-repeat: no-repeat;
-	background-size: 18px 18px;
-	padding-left: 25px;
 }
 
 a[href$=".pdf"] {
@@ -42,4 +39,17 @@ a[href$=".jpg"] {
 
 a[href$=".zip"] {
 	background-image: url("../img/icn-zip.svg");
+}
+
+a[href*="downloads"] {
+	background-repeat: no-repeat;
+	background-size: 18px 18px;
+	padding-left: 25px;
+}
+
+img[src*="thumbnails"] {
+	margin: 4px;
+	border: solid 2px;
+	width: 180px;
+	height: 140px;
 }
