--- a/css/style6.css
+++ b/css/style6.css
@@ -1,6 +1,6 @@
 /* Structural Pseudo-classes------------------ */
 
-div:nth-child(4) {
+div:nth-of-type(4) {
   background: #52bab3;
   color: white;
 }
